feat: add jib and docker compose